# napari-stitcher

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini  versions.json
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md  config.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/contributing/: index.html
0.1.0/installation/: index.html
0.1.0/loading/: index.html
0.1.0/naming_convention/: index.html
0.1.0/prearrangement/: index.html
0.1.1/: sitemap.xml
0.1.1/loading/: index.html
0.1.1/scripting/: index.html
0.1.2/: sitemap.xml
0.1.3/contributing/: index.html
0.1.3/writing/: index.html
0.1.4/installation/: index.html
doc/source/: conf.py  index.rst
doc/source/developer_guide/: index.rst
doc/source/user_guide/: index.rst  installation.rst  quickstart.rst
docs/: contributing.md  docs_requirements.txt  index.md  installation.md  loading.md  naming_convention.md  prearrangement.md  quickstart.md  scripting.md  writing.md
main/: 404.html  index.html  sitemap.xml
main/contributing/: index.html
main/installation/: index.html
main/loading/: index.html
main/naming_convention/: index.html
main/prearrangement/: index.html
main/quickstart/: index.html
main/scripting/: index.html
main/search/: search_index.json
main/writing/: index.html
notebooks/: registration_example.ipynb  registration_multi_view.ipynb  stabilization_example.ipynb
src/: batch_notebook.ipynb
src/napari_stitcher/: __init__.py  _file_utils.py  _fusion.py  _loader_widget.py  _mosaic_widget.py  _msi_utils.py  _multiscale_spatial_image_utils.py  _mv_graph.py  _reader.py  _registration.py  _sample_data.py  _spatial_image_utils.py  _stitcher_widget.py  _transformation.py  _utils.py  _viewer_utils.py  _weights.py  _widget.py  _writer.py  napari.yaml  viewer_utils.py
src/napari_stitcher/_tests/: test_fusion.py  test_local_czi_files.py  test_mosaic_widget.py  test_mv_graph.py  test_reader.py  test_registration.py  test_sample_data.py  test_spatial_image_utils.py  test_stitcher_widget.py  test_viewer_utils.py  test_widget.py  test_writer.py
