[metadata]
name = napari-stitcher
version = 0.0.1
description = A GUI for stitching 2-3D tiled image datasets
long_description = file: README.md
long_description_content_type = text/markdown

author = Marvin Albert
author_email = marvin.albert@pasteur.fr
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy >=1.18
    magicgui
    qtpy
    tifffile >=2022.7.28
    multiview-stitcher[aicsimageio] ==0.1.14
    spatial_image ==0.3.0
    multiscale_spatial_image ==0.11.2

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-stitcher = napari_stitcher:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
testing_macos = # napari and pyqt5 are installed via conda
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
