[metadata]
name = napari-stitcher
description = Stitch napari image layers in 2-3D+t
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/multiview-stitcher/napari-stitcher/issues
    Documentation = https://multiview-stitcher.github.io/napari-stitcher/
    Source Code = https://github.com/multiview-stitcher/napari-stitcher
    User Support = https://github.com/multiview-stitcher/napari-stitcher/issues

author = Marvin Albert
author_email = marvin.albert@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy >=1.18
    magicgui
    qtpy
    tifffile >=2022.7.28
    multiview-stitcher[aicsimageio] ==0.1.19

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-stitcher = napari_stitcher:napari.yaml

[options.extras_require]
testing_no_gui = # napari and pyqt5 can be installed via conda
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
testing =
    %(testing_no_gui)s
    napari
    pyqt5

[options.package_data]
* = *.yaml
